{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 26,
  "lineage": "adf192e4-9973-e741-b218-5fb206052ab7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0da4f6afe344f7ab9",
            "domain": "vpc",
            "id": "eipalloc-0dd0abbdbf0238e94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0533bb02caae4e7fb",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-164-235-94.compute-1.amazonaws.com",
            "public_ip": "54.164.235.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.test",
            "aws_security_group.allow_web",
            "aws_subnet.Subnet-1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:381740868237:instance/i-07da48a5c43517a81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07da48a5c43517a81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform_Key_Pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0533bb02caae4e7fb"
              }
            ],
            "primary_network_interface_id": "eni-0533bb02caae4e7fb",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.164.235.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c05b63f750766f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0897a0b3b8736e03a",
            "tags": {
              "Name": "Web_server"
            },
            "tags_all": {
              "Name": "Web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0256691f617d3e9d2"
            ]
          },
          "dependencies": [
            "aws_network_interface.test",
            "aws_security_group.allow_web",
            "aws_subnet.Subnet-1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381740868237:internet-gateway/igw-045875965decee9a4",
            "id": "igw-045875965decee9a4",
            "owner_id": "381740868237",
            "tags": {
              "Name": "Prod_IGW"
            },
            "tags_all": {
              "Name": "Prod_IGW"
            },
            "vpc_id": "vpc-08a33cd5fe1b975c4"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0533bb02caae4e7fb",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:ab:62:86:95:bf",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0256691f617d3e9d2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0897a0b3b8736e03a"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.Subnet-1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PROD_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381740868237:route-table/rtb-0e268667ad4c34dd8",
            "id": "rtb-0e268667ad4c34dd8",
            "owner_id": "381740868237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045875965decee9a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_IGW"
            },
            "tags_all": {
              "Name": "Terraform_IGW"
            },
            "vpc_id": "vpc-08a33cd5fe1b975c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f982ebc3e9d0f0",
            "route_table_id": "rtb-0e268667ad4c34dd8",
            "subnet_id": "subnet-0897a0b3b8736e03a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.PROD_route_table",
            "aws_subnet.Subnet-1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381740868237:security-group/sg-0256691f617d3e9d2",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0256691f617d3e9d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "381740868237",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a33cd5fe1b975c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381740868237:subnet/subnet-0897a0b3b8736e03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0897a0b3b8736e03a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381740868237",
            "tags": {
              "Name": "Prod-subnet"
            },
            "tags_all": {
              "Name": "Prod-subnet"
            },
            "vpc_id": "vpc-08a33cd5fe1b975c4"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381740868237:vpc/vpc-08a33cd5fe1b975c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054a7ac2a5065380a",
            "default_route_table_id": "rtb-0d0ae818766134dad",
            "default_security_group_id": "sg-0c353fee288ce87bc",
            "dhcp_options_id": "dopt-7d221007",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a33cd5fe1b975c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d0ae818766134dad",
            "owner_id": "381740868237",
            "tags": {
              "Name": "Terraform_vpc"
            },
            "tags_all": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}